--- a/multivariate.html
+++ b/multivariate.html
@@ -69,7 +69,7 @@ img {
 <div id="header">
 <h1 class="title">Multivariate analysis of categorical response variables using mixed modeling tricks</h1>
 <h4 class="author"><em>Michael Li</em></h4>
-<h4 class="date"><em>09:36 21 March 2016</em></h4>
+<h4 class="date"><em>10:22 21 March 2016</em></h4>
 </div>
 
 
@@ -81,6 +81,7 @@ img {
 library(lme4)
 library(ggplot2)
 library(reshape2)
+library(dplyr)
 library(tidyr)
 library(rstan)
 theme_set(theme_bw())</code></pre>
@@ -116,6 +117,34 @@ head(multivar_df)</code></pre>
 ## 4           0
 ## 5           1
 ## 6           0</code></pre>
+<p>Now we want to reshape/melt it into a univariate framework.</p>
+<pre class="r"><code>Mdat &lt;- multivar_df %&gt;% 
+  transmute(results=Mresults
+            , pre_couplingT=Mpre_couplingT
+            , couplingT=couplingT
+            , activeness=Mactiveness
+            , sex=&quot;Male&quot;
+            , couple_id = 1:1000)
+
+Fdat &lt;- multivar_df %&gt;% 
+  transmute(results=Fresults
+            , pre_couplingT=Fpre_couplingT
+            , couplingT=couplingT
+            , activeness=Factiveness
+            , sex=&quot;Female&quot;
+            , couple_id = 1:1000
+            )
+
+uni_dat &lt;- rbind(Mdat,Fdat) %&gt;% mutate(id=1:2000)
+
+head(uni_dat)</code></pre>
+<pre><code>##   results pre_couplingT couplingT activeness  sex couple_id id
+## 1       1             6         9          1 Male         1  1
+## 2       1             8        10          1 Male         2  2
+## 3       1             6        11          0 Male         3  3
+## 4       0             9         9          1 Male         4  4
+## 5       1             5        11          0 Male         5  5
+## 6       0             2        13          1 Male         6  6</code></pre>
 </div>
 
 
