--- a/multivariate.html
+++ b/multivariate.html
@@ -69,7 +69,7 @@ img {
 <div id="header">
 <h1 class="title">Multivariate analysis of categorical response variables using mixed modeling tricks</h1>
 <h4 class="author"><em>Michael Li</em></h4>
-<h4 class="date"><em>21:58 21 March 2016</em></h4>
+<h4 class="date"><em>22:49 21 March 2016</em></h4>
 </div>
 
 
@@ -122,60 +122,38 @@ head(multivar_df)</code></pre>
 <p>How that we have it in the multivariate framework, we can try to model it using MCMCglmm</p>
 <pre class="r"><code>mfit &lt;- MCMCglmm(cbind(Mresults,Fresults)~trait-1
                  , rcov=~us(trait):units
-                 , family=c(&quot;ordinal&quot;,&quot;ordinal&quot;)
-                 , data=multivar_df)</code></pre>
+                 , family=c(&quot;categorical&quot;,&quot;categorical&quot;)
+                 , data=multivar_df
+         , verbose=FALSE)
+
+summary(mfit)</code></pre>
 <pre><code>## 
-##                        MCMC iteration = 0
+##  Iterations = 3001:12991
+##  Thinning interval  = 10
+##  Sample size  = 1000 
 ## 
-##  Acceptance ratio for liability set 1 = 0.000517
+##  DIC: 2469.078 
 ## 
-##                        MCMC iteration = 1000
+##  R-structure:  ~us(trait):units
 ## 
-##  Acceptance ratio for liability set 1 = 0.315012
+##                                       post.mean  l-95% CI u-95% CI
+## traitMresults.1:traitMresults.1.units   0.28382  0.020089   0.5169
+## traitFresults.1:traitMresults.1.units   0.09008 -0.002546   0.2949
+## traitMresults.1:traitFresults.1.units   0.09008 -0.002546   0.2949
+## traitFresults.1:traitFresults.1.units   0.09164  0.010799   0.3388
+##                                       eff.samp
+## traitMresults.1:traitMresults.1.units    4.911
+## traitFresults.1:traitMresults.1.units    3.614
+## traitMresults.1:traitFresults.1.units    3.614
+## traitFresults.1:traitFresults.1.units    3.494
 ## 
-##                        MCMC iteration = 2000
+##  Location effects: cbind(Mresults, Fresults) ~ trait - 1 
 ## 
-##  Acceptance ratio for liability set 1 = 0.303600
-## 
-##                        MCMC iteration = 3000
-## 
-##  Acceptance ratio for liability set 1 = 0.302943
-## 
-##                        MCMC iteration = 4000
-## 
-##  Acceptance ratio for liability set 1 = 0.264419
-## 
-##                        MCMC iteration = 5000
-## 
-##  Acceptance ratio for liability set 1 = 0.225413
-## 
-##                        MCMC iteration = 6000
-## 
-##  Acceptance ratio for liability set 1 = 0.199226
-## 
-##                        MCMC iteration = 7000
-## 
-##  Acceptance ratio for liability set 1 = 0.181913
-## 
-##                        MCMC iteration = 8000
-## 
-##  Acceptance ratio for liability set 1 = 0.167352
-## 
-##                        MCMC iteration = 9000
-## 
-##  Acceptance ratio for liability set 1 = 0.117941
-## 
-##                        MCMC iteration = 10000
-## 
-##  Acceptance ratio for liability set 1 = 0.176233
-## 
-##                        MCMC iteration = 11000
-## 
-##  Acceptance ratio for liability set 1 = 0.116595
-## 
-##                        MCMC iteration = 12000
-## 
-##  Acceptance ratio for liability set 1 = 0.102153</code></pre>
+##                 post.mean l-95% CI u-95% CI eff.samp  pMCMC    
+## traitMresults.1    0.8094   0.6538   0.9817    11.92 &lt;0.001 ***
+## traitFresults.1    0.8575   0.7315   1.0145    10.69 &lt;0.001 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
 <p>Ok, we obivously did/model it wrong. The mixing is very bad. (see eff.samp)</p>
 <p>Now we want to reshape/melt it into a univariate framework.</p>
 <pre class="r"><code>Mdat &lt;- multivar_df %&gt;% 
@@ -205,6 +183,45 @@ head(uni_dat)</code></pre>
 ## 4       0             9         9          1 Male         4  4
 ## 5       1             5        11          0 Male         5  5
 ## 6       0             2        13          1 Male         6  6</code></pre>
+<pre class="r"><code>glmerfit &lt;- glmer(results~pre_couplingT + couplingT + sex + activeness-1 + (1|couple_id)
+                  , family=&quot;binomial&quot;
+                  , verbose=FALSE
+                  , data=uni_dat)
+
+summary(glmerfit)</code></pre>
+<pre><code>## Generalized linear mixed model fit by maximum likelihood (Laplace
+##   Approximation) [glmerMod]
+##  Family: binomial  ( logit )
+## Formula: results ~ pre_couplingT + couplingT + sex + activeness - 1 +  
+##     (1 | couple_id)
+##    Data: uni_dat
+## 
+##      AIC      BIC   logLik deviance df.resid 
+##   2472.6   2506.2  -1230.3   2460.6     1994 
+## 
+## Scaled residuals: 
+##     Min      1Q  Median      3Q     Max 
+## -1.6720 -1.3735  0.6200  0.6516  0.7745 
+## 
+## Random effects:
+##  Groups    Name        Variance Std.Dev.
+##  couple_id (Intercept) 0.1417   0.3765  
+## Number of obs: 2000, groups:  couple_id, 1000
+## 
+## Fixed effects:
+##               Estimate Std. Error z value Pr(&gt;|z|)
+## pre_couplingT  0.01391    0.02343   0.594    0.553
+## couplingT      0.03199    0.02317   1.381    0.167
+## sexFemale      0.44456    0.33660   1.321    0.187
+## sexMale        0.46277    0.28562   1.620    0.105
+## activeness    -0.08252    0.10243  -0.806    0.420
+## 
+## Correlation of Fixed Effects:
+##            pr_cpT cplngT sexFml sexMal
+## couplingT  -0.003                     
+## sexFemale  -0.686 -0.679              
+## sexMale    -0.493 -0.799  0.918       
+## activeness  0.012 -0.033 -0.105 -0.198</code></pre>
 </div>
 
 
